# LazyFileTransfer_CMake

./: .gitignore  CMakeLists.txt  README.md
LazyFileTransfer_CMake/: CMakeLists.txt  Destination.cpp  Destination.h  LazyFileTransfer.cpp  Source.cpp  Source.h  public.h
